add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)
add_executable(aufgabe1_9 aufgabe1_9.cpp)
add_executable(tests tests.cpp)
add_executable(aufgabe1_10 aufgabe1_10.cpp)
add_executable(Aufgabe1_11 Aufgabe1_11.cpp)
# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
